fix: Fix the mobile paragraph layout shift from tablets screen sizes

--- a/src/styles/sections/_team.scss
+++ b/src/styles/sections/_team.scss
@@ -76,6 +76,7 @@
                 @media (max-width: 768px) {
                     display: block;
                     line-height: .95;
+                    overflow: hidden;
 
                     .text__wrapper {
                         overflow: hidden;
@@ -94,6 +95,10 @@
                 font-size: clamp(.95rem, 1.3vw, 1.125rem);
                 line-height: 1.6;
                 width: 80%;
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                }
             }
         }
 
